<resources>
    <string name="about">О приложении</string>
    <string name="app_name">Лыжный Синоптик</string>
    <string name="welcom_screen">Экран приветствия</string>
    <string name="next_activity">Старт!</string>
    <string name="first_title">Выбирите нужные параметры</string>
    <string name="air_temperature">t воздуха</string>
    <string name="type_of_snow">Тип снега</string>
    <string name="fresh">Свежий</string>
    <string name="old">Старый</string>
    <string name="crude">Сырой(до -7)</string>
    <string name="cruds">Сырой</string>
    <string name="artificial">Искусственный</string>
    <string name="title_activity_temperature_plus_ten_and_five">TemperaturePlusTenAndFive</string>
    <string name="temperature">t</string>
    <string name="colon">:</string>
    <string name="humidity">Влажность</string>
    <string name="fifty_five_hundred">55/100</string>
    <string name="forty_five_ninety">45/90+</string>
    <string name="footnote">Помните, что конечный результат зависит от правильного нанесения мази.</string>
    <string name="powders_accelerators">Порошки ускорители</string>
    <string name="powders_accelerators_default">Здесь отображаются  Порошки ускорители</string>
    <string name="paraphins">Парафины</string>
    <string name="paraphins_default">Здесь отображаются парафины</string>
    <string name="about_text">
        Полезная информация для лыжников гонщиков, горнолыжников, сноубордистов, биатлонистов, любителей и тех, кто стремится к победам.
        Обидно проигрывать, когда виной плохое скольжение.
        Программа “лыжный синоптик” поможет вам с подбором парафина на предстоящую гонку.
        Выражение «не попал в мазь» осталось в прошлом
        Удобно, когда под рукой есть база данных тестированных парафинов.
        Изобилие лыжной смазки на прилавках магазинов часто вводит лыжников в недоумение что же выбрать. Мы часто сталкиваемся с проблемой какой парафин купить, чем подготовить лыжи к предстоящему старту. Хватит экспериментировать. Эта программа сузит круг ваших поисков. Из сотен результатов проведенных тестов со всего мира, отбираются лучшие парафины, ускорители, а также комбинации смешивания на каждый тип снега и температуру. И предоставляются к обзору только лидирующие позиции, которые чаще появлялись на первой строке в тестах в прошлом сезоне. Имеется вся температурная таблица.
        Эта информация возможно не даст вам 100%го результата, но опыт показывает, что парафины прошедшие отборочное тестирование на выкат, работают лучше.
        Приложение “независимое” не занимающееся рекламой, поэтому создано в платной версии.
        Будет обновление результатов вновь проведенных тестов за текущий сезон.
        Имеются ограничения на просмотр, не больше 5 раз в сутки!
</string>
    <string name="paraphins_fresh_plus_6_10">
        1. VAUHTI HF wet (-1+10)\n 2. START HF 2 (0+10) \n 3. SWIX MARATHON DHF104 (0+20)
    </string>
    <string name="paraphins_crude_plus_6_10">
        1. SWIX HF10 (0+10)\n 2.SWIX  MARATHON DHF104 (0+20)  \n 3. START HF 2 (0+10)
    </string>
    <string name="paraphins_old_plus_6_10">
        1. SWIX  MARATHON DHF104BW-4 (0+20)\n 2. START HF 2 (0+10) \n 3. Ski Go HF (+20-1)
    </string>
    <string name="paraphins_arcificial_plus_6_10">
        1. Ski Go HF (+20-1) \n 2. SWIX  MARATHON DHF104BW-4 (0+20) \n 3. START HF 2 (0+10)
    </string>
    <string name="powders_accelerators_fresh_plus_6_10">
        1. OPTIWAX (+10-10) \n 2.SWIX FC10X (0+10)
    </string>
    <string name="powders_accelerators_old_plus_6_10">
        1. OPTIWAX (+10-10) \n 2.START BM1(+10-2) \n 3. Ski Go C22(+22-2) ускоритель \n 4. SWIX FC8A(+10-2) ROCKET эмульсия
    </string>
    <string name="powders_accelerators_crude_plus_6_10">
        1. SWIX  FC10X(0+15)  порошок \n 2. VAUHTI Silverfox wet(0+15) спресовка
    </string>
    <string name="powders_accelerators_arcificial_plus_6_10">
        1. Ski Go C22(+22-2) ускоритель \n 2. START SFR99(+9-9) ускоритель \n 3. SWIX FC8A(+10-2)ROCKET эмульсия
    </string>
    <string name="paraphins_fresh_plus_3_5">
        1. Start FHF2 (+5+1)\n 2. VAUHTI HF(-1+10) \n 3. SWIX MARATHON DHF104 (0+20)
    </string>
    <string name="paraphins_crude_plus_3_5">
        1. START HF 2 (0+10) \n 2. SWIX HF10 (0+10) \n 3. SWIX LF10 (0+10) \n 4.VAUHTI HF(-1+10)
    </string>
    <string name="paraphins_old_plus_3_5">
        1. VAUHTI HF(-1+10) \n 2. SWIX MARATHON DHF104 BW-4 (0+20) \n 3. START FHF2 (+5+1)
    </string>
    <string name="paraphins_arcificial_plus_3_5">
        1. START FHF 2 (+5+1) \n  2.Ski Go HF (+20-1) \n  3.SWIX  HF10BW(0+10)
    </string>
    <string name="powders_accelerators_fresh_plus_3_5">
        1. START FHF5(-1+5) \n 2.Rex TK 245 (+5-5) \n 3. SWIX  FC10X(0+10)
    </string>
    <string name="powders_accelerators_old_plus_3_5">
        1.START FHF5(-1+5) \n 2.Rex TK245(+5-5) \n 3. SWIX FC8A(+10-2) ROCKET эмульсия
    </string>
    <string name="powders_accelerators_crude_plus_3_5">
        1.START FHF5(-1+5) \n 2.SWIX  FC10X(0+15) \n 3.VAUHTI Silverfox wet(0+15) спресовка
    </string>
    <string name="powders_accelerators_plus_arcificial_plus_3_5">
        1.START FHF5(-1+5) \n 2.START BM7(+10-3) \n 3.OPTIWAX (+10-10) \n 4.SWIX FC8A(+10-2)ROCKET эмульсия
    </string>
    <string name="paraphins_fresh_plus_2_1">
        1. START FHF2 (+5+1) \n 2.VAUHTI HF (-1+10) \n 3.SWIX LF (-6-12) второй слой TOKO HF (-4+10) \n 4. REX HF11(+2-2) \n 5. START PHF200 (+10+1)
    </string>
    <string name="paraphins_crude_plus_2_1">
        1. START FHF 2 (+5-1) \n 2. SWIX HF10 (0+10) \n 3. TOKO HF RED (-4-12) (парадокс) \n 4. VAUHTI HF (-1+10)
    </string>
    <string name="paraphins_old_plus_2_1">
       1. SWIX MARATHON DHF104 BW-4 (0+20) \n 2. START FHF2 (+5+1) \n 3. ЛУЧ/REY HF (+3-3) верхний слой VF1(+10-10)
    </string>
    <string name="paraphins_arcificial_plus_2_1">
        1. START FHF2 (+5+1) \n 2. VAUHTI HF2 (+10-1) \n 3. SWIX HF8BW (-4+4)
    </string>
    <string name="powders_accelerators_fresh_plus_2_1">
       1. START HF11(+5-10) ускоритель \n 2. REX NAGANO (+3-3) ускоритель \n 3. SWIX FC10X (0+10)
    </string>
    <string name="powders_accelerators_old_plus_2_1">
        1. VAUHTI F108 (+1-15) ускоритель \n 2. START HF11 (+5-10) ускоритель \n 3. START FHF5 (+5-1) порошок
    </string>
    <string name="powders_accelerators_crude_plus_2_1">
         1. START FHF5 (+5-1) порошок \n 2. TOKO Jet Stream (+10-4) порошок \n 3. START HFXT (+5-5) эмульсия
    </string>
    <string name="powders_accelerators_arcificial_plus_2_1">
        1. START FHF5 (-1+5) \n 2. TOKO JetStream (+10-4) \n 3. START HF11 (5-10) \n 4. SWIX FC8A (+10-2)ROCKET эмульсия
    </string>
    <string name="paraphins_fresh_0">
        1. VAUHTI HF (-1+10) \n 2. START FHF2 (+5+1) \n 3. SWIX LF6 (-6-12) \n 4. REX HF11 (+2-2)
    </string>
    <string name="paraphins_old_0">
      1. VAUHTI HF Moly Mid (+3-5) \n 2. SWIX HF 8BW (-4+4) \n 3. SKI GO HF (+1-5) \n 4. START PHF 400
    </string>
    <string name="paraphins_crude_0">
       1. VAUHTI HF (+3-5) \n 2. Rex 425 (+4-2) \n 3. START FHF2 (+5-1)
    </string>
    <string name="paraphins_arcificial_0">
        1. VAUHTI LF (-1-10) \n 2. VAUHTI HF (+3-5) \n 3. SWIX HF8BW (-4+4) \n 4. SKI GO HF (+1-5)
    </string>
    <string name="powders_accelerators_fresh_0">
       1. START HF5 (+5-3) \n 2. VAUHTI F108 (+1-15) \n 3. SWIX FC7X (+2-6)
    </string>
    <string name="powders_accelerators_old_0">
        1. SKI GO (+5-5) \n 2. Rex TK 245 (+5-5) \n 3. START BM7 (+10-3)
    </string>
    <string name="powders_accelerators_crude_0">
       1. Rex NAGANO (+3-3) ускоритель \n 2. SWIX FC10X (0+15) порошок
    </string>
    <string name="powders_accelerators_arcificial_0">
        1. SWIX FC10X (0+15) \n 2. SKI GO (+10-6) \n 3. VAUHTI Carbon HF C15 (0-6)
    </string>
    <string name="paraphins_fresh_minus_1_2">
        1. VAUHTI HF (-1+10) \n 2. SWIX LF8 (-2-8) верхний слой RODE HF (0-4) \n 3. START FHF4 (-1-6)
    </string>
    <string name="paraphins_old_minus_1_2">
     1. VAUHTI HF (+3-5) \n 2. SWIX HF 8BW (-4+4) \n 3. SKI GO HF (+1-5) \n 4. START FHF4 (-1-6) \n 5. Zet HF4 (0-6)
    </string>
    <string name="paraphins_crude_minus_1_2">
       1. VAUHTI HF (+3-5) \n 2. Rex 423 (-1-10) \n 3. Rex HF21 (-2-8) \n 4. START FHF4 (-1-6)
    </string>
    <string name="paraphins_arcificial_minus_1_2">
        1. START FHF4 (-1-6) \n 2. VAUHTI HF (+3-5) \n 3. SWIX HF8BW (-4+4) \n 4. SKI GO HF (+1-5)
    </string>
    <string name="powders_accelerators_fresh_minus_1_2">
      1. SWIX FC7X (+2-6) \n 2. START HF5 (+5-3) \n 3. VAUHTI F108 (+1-15) ускоритель
    </string>
    <string name="powders_accelerators_old_minus_1_2">
        1. SWIX FC7X (+2-6) \n 2. START HF5 (+5-3) \n 3. START FHF7 (-1-5) \n 4. SKI GO (+5-5)
    </string>
    <string name="powders_accelerators_crude_minus_1_2">
       1. Rex TK245 (+5-5) \n 2. SWIXFC78 (+10-10) \n 3. Rex NAGANO (+3-3) ускоритель \n 4. START SFR 99 (+9-9)
    </string>
    <string name="powders_accelerators_arcificial_minus_1_2">
        1. SWIX FC7X (+2-6) \n 2. SKI GO (+10-6) \n 3. VAUHTI Carbon HF C15 (0-6) \n 4. START FHF7 (-1-5)
    </string>
    <string name="paraphins_fresh_minus_3">
        1. VAUHTI HF COLD (-1-10) \n 2. SWIX LF8 (-2-8) верхний слой RODE HF (0-4) \n 3. START FHF4 (-1-6)
    </string>
    <string name="paraphins_old_minus_3">
     1. SWIX HF 8BW (-4+4) \n 2. SKI GO HF (+1-5) \n 3. START FHF4 (-1-6) \n 4. Rex HF21 (-2-8)
    </string>
    <string name="paraphins_crude_minus_3">
       1. Rex 423 (-1-10) \n 2. HOLMENKOL (-4-8) верхний слой Rex HF 416 (0-4) \n 3. START FHF4 (-1-6)
    </string>
    <string name="paraphins_arcificial_minus_3">
       1. START FHF4 (-1-6) \n 2. SWIX HF8BW (-4+4)
    </string>
    <string name="powders_accelerators_fresh_minus_3">
      1. SWIX FC7X (+2-6) \n 2. RexTK245 (+5-5) \n 3. VAUHTI F108 (+1-15) ускоритель \n 4. SKI GO C 105 (+1-15)
    </string>
    <string name="powders_accelerators_old_minus_3">
        1. SWIX FC7X (+2-6) \n 2. START HF5 (+5-3) \n 3. Rex TK28 (-2-8) \n 4. SKI GO (+5-5)
    </string>
    <string name="powders_accelerators_crude_minus_3">
      1. Rex TK245 (+5-5) \n 2. SWIXFC6X (-1-10) \n 3. TOKO JetStream (+10-4) \n 4. START SFR 99 (+9-9)
    </string>
    <string name="powders_accelerators_arcificial_minus_3">
        1. SWIX FC7X (+2-6) \n 2. SKI GO (+10-6) \n 3. VAUHTI Carbon HF C15 (0-6) \n 4. START FHF7 (-1-5)
    </string>
    <string name="paraphins_fresh_minus_4_5">
         1. VAUHTI HF COLD (-1-10) \n 2. Ski GO LF (-3-10) \n 3. START FHF4 (-1-6) \n 4. Rex HF21 (-2-8)
    </string>
    <string name="paraphins_old_minus_4_5">
     1. SWIX HF 8BW (-4+4) \n 2. START FHF4 (-1-6) \n 3. Rex HF Olympiko (-4-10)
    </string>
    <string name="paraphins_crude_minus_4_5">
       1. Rex HF (-4-10) синий \n 2. START HF4 (-2-7) \n 3. START FHF4 (-1-6)
    </string>
    <string name="paraphins_arcificial_minus_4_5">
      1. START FHF4 (-1-6) \n 2. Rex HF Olympiko (-4-10) \n 3. Ski Go HF (-3-10)
    </string>
    <string name="powders_accelerators_fresh_minus_4_5">
      1. SWIX FC7X (+2-6) \n 2. RexTK29 (-2-8) \n 3. VAUHTI F108 (+1-15) ускоритель \n 4. SKI GO C 105 (+1-15) \n 5. START SFR 99 (+9-9)
    </string>
    <string name="powders_accelerators_old_minus_4_5">
        1. SWIX FC7X (+2-6) \n 2. Rex TK28 (-2-8) \n 3. SKI GO C 44 (+3-9) \n 4.  START SFR 99 (+9-9)
    </string>
    <string name="powders_accelerators_crude_minus_4_5">
      1. Rex TK245 (+5-5) \n 2. SWIXFC6X (-1-10) \n 3. VAUHTI F108 (+1-15) ускоритель \n 4. SKI GO C 105 (+1-15)
    </string>
    <string name="powders_accelerators_arcificial_minus_4_5">
        1. SWIX FC7X (+2-6) \n 2. SKI GO (+10-6) \n 3. VAUHTI Carbon HF C15 (0-6) \n 4. SWIX LK CERA F (0-10) \n 5. START SFR 99 (+9-9)
    </string>
</resources>