<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/first_background"
    tools:context=".First" >

    <TextView
        android:id="@+id/first_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:autoText="false"
        android:background="@android:color/white"
        android:fontFamily="casual"
        android:text="@string/first_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/air_temperature"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/air_temperature"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/first_title"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryBlue"
        android:text="@string/old"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryBlue"
        android:text="@string/fresh"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryBlue"
        android:text="@string/crude"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryBlue"
        android:text="@string/artificial"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@android:color/white"
        android:text="@string/type_of_snow"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/air_temperature"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>