<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/first_background"
    tools:context=".ski_forecaster.SkiForecaster">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#81000000"
        tools:layout_editor_absoluteY="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/first_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:fontFamily="casual"
                android:text="@string/first_title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/air_temperature"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="44dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/air_temperature"
                android:inputType="phone"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="@string/type_of_snow"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_fresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="93dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="93dp"
                android:background="@color/colorPrimaryBlue"
                android:text="@string/fresh"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="12sp"
                android:typeface="normal" />

            <Button
                android:id="@+id/btn_crude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="93dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="93dp"
                android:background="@color/colorPrimaryBlue"
                android:text="@string/crude"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="93dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="93dp"
                android:background="@color/colorPrimaryBlue"
                android:text="@string/old"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_artificial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="93dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="93dp"
                android:background="@color/colorPrimaryBlue"
                android:text="@string/artificial"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>