<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back_arcificial"
    tools:context=".condition.Arcificial">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9E000000"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-95dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_temperature_arcificial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="93dp"
                android:layout_marginEnd="93dp"
                android:text="@string/temperature"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_type_show_arcificial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:padding="10dp"
                android:text="@string/type_of_snow"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_temperature_arcificial" />

            <TextView
                android:id="@+id/text_type_arcificial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:padding="10dp"
                android:text="@string/artificial"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/text_type_show_arcificial"
                app:layout_constraintTop_toBottomOf="@id/text_temperature_arcificial" />

            <TextView
                android:id="@+id/humidity_arcificial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:text="@string/humidity"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_type_show_arcificial" />

            <TextView
                android:id="@+id/humidity_2_arcificial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:text="@string/fifty_five_hundred"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/humidity_arcificial"
                app:layout_constraintTop_toBottomOf="@+id/text_type_arcificial" />

            <TextView
                android:id="@+id/paraphin_arcificial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:padding="5dp"
                android:text="@string/paraphins_default"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paraphins2" />

            <TextView
                android:id="@+id/paraphins2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/paraphins"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidity_arcificial" />

            <TextView
                android:id="@+id/powders_accelerators_arcificial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/powders_accelerators"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paraphin_arcificial" />

            <TextView
                android:id="@+id/powders_accelerators_2_arcificial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:padding="5dp"
                android:text="@string/powders_accelerators_default"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/powders_accelerators_arcificial" />

            <TextView
                android:id="@+id/footnote_arcificial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:padding="10dp"
                android:text="@string/footnote"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/powders_accelerators_2_arcificial" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>